crates/harness-tui/tests/snapshots/graph__graph_screen_single_node.snap
---
source: crates/harness-tui/tests/graph.rs
expression: "render(&s, 80, 24)"
---
" harness-rs │ m │ only-flagged │ ↑0 ↓0        Enter envia · ? help · Ctrl+C sai "
"┌ agentes (setas/hjkl navega · Enter chat · m msg · i injeta · x interrompe) ──┐"
"│                                                                              │"
"│                                ┌────────────┐                                │"
"│                                │● root      │                                │"
"│                                └────────────┘                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌input─────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
