crates/harness-tui/tests/snapshots/graph__inject_mode_shows_target_in_input_title.snap
---
source: crates/harness-tui/tests/graph.rs
expression: "render(&s, 80, 24)"
---
" harness-rs │ m │ only-flagged │ ↑0 ↓0        Enter envia · ? help · Ctrl+C sai "
"[sys]                                                                           "
"HarnessRS — Enter envia · Esc cancela geração · Ctrl+C sai                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌inject contexto → a───────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
